feat: addded training to UI and neural network visualization
